--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.troll-loader {
+   width: 72px;
+   height: 12px;
+   -webkit-mask: radial-gradient(circle closest-side,#6365f1 94%,#0000) left/20% 100%;
+   background: linear-gradient(#6365f1 0 0) left/0% 100% no-repeat #dbdcef;
+   animation: loader-c3ir73 1.2s infinite steps(6);
+}
+
+@keyframes loader-c3ir73 {
+   100% {
+      background-size: 120% 100%;
+   }
+}
